2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/wizard.xsl (quick-first-scan-wizard)
	(quick-task-wizard): Insert client address into the target hosts field.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-groups-table): Add missing
	filtered-count param for list-window template call.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-nvt-table): Fix swapped i18n msgid and
	context for Severity column.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (edit-header-icons): Use correct URL for
	config editor help.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_graphics_base.js (data_top_list): New
	data transformation function. Selects only first 10 records with
	non-zero y field.

	* src/html/classic/js/gsa_h_bar_chart.js (generate): Get top 10 list
	using data_transform function instead of doing it directly.

2015-08-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (create_task_omp): Remove leftover test output.

2015-08-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (new_task): Get tag names list.
	(create_task_omp): Add option for automatically adding a tag directly
	after creating the task.

	* src/gsad.c (init_validator): Add "add_tag" parameter.

	* src/html/classic/omp.xsl (new_task): Add fields for adding a tag.

	* src/html/classic/help.xsl (new_task.html): Add help for tag fields.

2015-08-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-scan-management-top-visualization):
	Add correct "Top 10" chart to left visualization box.

2015-08-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add word cloud charts for Results.

	* CMakeLists.txt: Install new JS files.

	* COPYING: Add copyright and license info for d3 cloud layout.
