@@ -1,5 +1,11 @@
 2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
+	* src/html/classic/js/gsa_bar_chart.js (generate),
+	src/html/classic/js/gsa_h_bar_chart.js (generate): Calculate percentage
+	in tooltip based on maximum instead of sum for fields other than count.
+
+2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
 	* src/html/classic/wizard.xsl (quick-first-scan-wizard)
 	(quick-task-wizard): Insert client address into the target hosts field.
 
